webaudio/Analyser/handle-silent-inputs.html test is failing https://bugs.webkit.org/show_bug.cgi?id=216708

Reviewed by Geoffrey Garen.

Source/WebCore:

Merge the following fix to AnalyserNode from Blink so that webaudio/Analyser/handle-silent-inputs.html
layout test starts passing:
- https://codereview.chromium.org/2666063003

No new tests, rebaselined existing test.

* Modules/webaudio/AnalyserNode.cpp:
(WebCore::AnalyserNode::process):
(WebCore::AnalyserNode::updatePullStatus):
(WebCore::AnalyserNode::tailTime const):
* Modules/webaudio/AnalyserNode.h:
* Modules/webaudio/AudioBasicInspectorNode.h:

LayoutTests:

Rebaseline test that is now passing.

* webaudio/Analyser/handle-silent-inputs-expected.txt:


Canonical link: https://commits.webkit.org/229511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267252 268f45cc-cd09-0410-ab3c-d52691b4dbfc