Source/WebCore/Modules/webaudio/AnalyserNode.cpp
@@ -82,15 +82,21 @@ void AnalyserNode::process(size_t framesToProcess)
 {
     AudioBus* outputBus = output(0)->bus();
 
-    if (!isInitialized() || !input(0)->isConnected()) {
+    if (!isInitialized()) {
         outputBus->zero();
         return;
     }
 
     AudioBus* inputBus = input(0)->bus();
     
-    // Give the analyser the audio which is passing through this AudioNode.
+    // Give the analyser the audio which is passing through this AudioNode. This must always
+    // be done so that the state of the Analyser reflects the current input.
     m_analyser.writeInput(inputBus, framesToProcess);
+
+    if (!input(0)->isConnected()) {
+        outputBus->zero();
+        return;
+    }
 
     // For in-place processing, our override of pullInputs() will just pass the audio data through unchanged if the channel count matches from input to output
     // (resulting in inputBus == outputBus). Otherwise, do an up-mix to stereo.
@@ -151,6 +157,48 @@ bool AnalyserNode::requiresTailProcessing() const
 {
     // Tail time is always non-zero so tail processing is required.
     return true;
+}
+
+void AnalyserNode::updatePullStatus()
+{
+    ASSERT(context().isGraphOwner());
+
+    if (output(0)->isConnected()) {
+        // When an AudioBasicInspectorNode is connected to a downstream node, it
+        // will get pulled by the downstream node, thus remove it from the context's
+        // automatic pull list.
+        if (m_needAutomaticPull) {
+            context().removeAutomaticPullNode(*this);
+            m_needAutomaticPull = false;
+        }
+    } else {
+        unsigned numberOfInputConnections = input(0)->numberOfRenderingConnections();
+        // When an AnalyserNode is not connected to any downstream node
+        // while still connected from upstream node(s), add it to the context's
+        // automatic pull list.
+        //
+        // But don't remove the AnalyserNode if there are no inputs
+        // connected to the node. The node needs to be pulled so that the
+        // internal state is updated with the correct input signal (of
+        // zeroes).
+        if (numberOfInputConnections && !m_needAutomaticPull) {
+            context().addAutomaticPullNode(*this);
+            m_needAutomaticPull = true;
+        }
+    }
+}
+
+bool AnalyserNode::propagatesSilence() const
+{
+    // An AnalyserNode does actually propogate silence, but to get the
+    // time and FFT data updated correctly, process() needs to be
+    // called even if all the inputs are silent.
+    return false;
+}
+
+double AnalyserNode::tailTime() const
+{
+    return RealtimeAnalyser::MaxFFTSize / static_cast<double>(context().sampleRate());
 }
 
 } // namespace WebCore
